--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,9 @@
 
 # Ignore Byebug command history file.
 .byebug_history
+
+# Ignore application configuration
+/config/application.yml
+
+# Ignore public upload assets
+/public/uploads
